[tool.poetry]
name = "findmysound"
version = "0.1.0"
description = "Python library that can help you detect sounds that you isolated"
authors = ["Renaud Jester"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
